; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_eth/test/extr_test_emac.c_test_on_ping_end.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_eth/test/extr_test_emac.c_test_on_ping_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_PING_PROF_REQUEST = common dso_local global i32 0, align 4
@ESP_PING_PROF_REPLY = common dso_local global i32 0, align 4
@ESP_PING_PROF_DURATION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"%d packets transmitted, %d received, time %dms\0A\00", align 1
@ETH_PING_END_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @test_on_ping_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_on_ping_end(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = ptrtoint i8* %9 to i32
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @ESP_PING_PROF_REQUEST, align 4
  %13 = call i32 @esp_ping_get_profile(i32 %11, i32 %12, i32* %6, i32 4)
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @ESP_PING_PROF_REPLY, align 4
  %16 = call i32 @esp_ping_get_profile(i32 %14, i32 %15, i32* %7, i32 4)
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @ESP_PING_PROF_DURATION, align 4
  %19 = call i32 @esp_ping_get_profile(i32 %17, i32 %18, i32* %8, i32 4)
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %20, i32 %21, i32 %22)
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %31

27:                                               ; preds = %2
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* @ETH_PING_END_BIT, align 4
  %30 = call i32 @xEventGroupSetBits(i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %27, %2
  ret void
}

declare dso_local i32 @esp_ping_get_profile(i32, i32, i32*, i32) #1

declare dso_local i32 @printf(i8*, i32, i32, i32) #1

declare dso_local i32 @xEventGroupSetBits(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
